--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <p>
       <strong> antara walid </strong>
       <hr>
-    <a href ="./cv.html">TP1 (html) </a>
+    <a href ="CV project/cv.html">TP1 (html) </a>
     </p>
   </body>
   
