--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <strong> antara walid </strong>
       <hr>
     <a href ="./cv.html">TP1 (html) </a>
+    <a href ="./cv-css.html">TP2 (html + css) </a>
     </p>
   </body>
   
