--- a/cv-css.html
+++ b/cv-css.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>my CV </title>
-        <link rel="stylesheet" href="cv.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
