--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <ul>
           <li><a href ="./cv.html">TP1 (html) </a></li>
           <li><a href ="./cv-css.html">TP1(html + css) </a></li>
+          <li><a href ="https://github.com/walid-ant/walid.github.io/blob/main/tp2%20ex2/ex2-index.html">tp2 ex1</a><li>
         </ul>
       </section>
    
