--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <ul>
           <li><a href ="./cv.html">TP1 (html) </a></li>
           <li><a href ="./cv-css.html">TP1(html + css) </a></li>
-          <li><a href ="./tp2 ex1/tp2 solution.html">tp2 ex1</a><li>
-          <li><a href ="./tp2 ex2/ex-index.html">tp2 ex2 </a><li>
+          <li><a href ="./tp2 ex1/tp2 solution.html">tp2.ex1</a><li>
+          <li><a href ="./tp2 ex2/ex2-index.html">tp2.ex2</a><li>
         </ul>
       </section>
    
